--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -21,3 +21,5 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import 'components/Alert.scss';
 @import 'components/OAuthButton.scss';
 @import 'components/Icon.scss';
+@import 'components/Projects.scss';
+@import 'components/Tasks.scss';
