--- a/src/styles/components/_Button.scss
+++ b/src/styles/components/_Button.scss
@@ -1,3 +1,12 @@
+button {
+  background: transparent;
+  border: 0;
+  padding: 0;
+  outline: none;
+  box-shadow: none;
+  cursor: default;
+}
+
 .btn {
   padding: 8px 12px;
   margin: 0;
@@ -8,56 +17,26 @@
   border-color: color(black-200);
   border-radius: 4px;
   transition: map-get($transition, cubic);
+  color: color(black-200);
+  border-color: color(black-200);
+  box-shadow: none;
+  outline: none !important;
 
   &:hover {
     background: transparent;
-  }
-
-  &:focus {
-    color: color(black-100);
-    outline: none !important;
-  }
-
-  &.black__theme {
     color: color(black-100);
     border-color: color(black-100);
   }
 
-  &.blue__theme {
-    @include button-theme(blue-100);
+  &:focus {
+    color: color(black-200);
+    border-color: color(black-100);
   }
 
-  &.green__theme {
-    @include button-theme(green-100);
+  &:active {
+    color: color(black-200);
+    border-color: color(black-100);
   }
-
-  &.red__theme {
-    @include button-theme(red-100);
-  }
-
-  &.purple__theme {
-    @include button-theme(purple-100);
-  }
-
-  &.orange__theme {
-    @include button-theme(orange-100);
-  }
-
-  &.yellow__theme {
-    @include button-theme(yellow-100);
-  }
-
-  &.pink__theme {
-    @include button-theme(pink-100);
-  }
-
-  &.white__theme {
-    @include button-theme(white-100);
-  }
-}
-
-button {
-  @extend .btn;
 }
 
 .ladda-button {
