--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -23,3 +23,4 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import 'components/Icon.scss';
 @import 'components/Projects.scss';
 @import 'components/Tasks.scss';
+@import 'components/Attachments.scss';
