--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,7 +1,7 @@
 /* Libs */
 @import url("https://fonts.googleapis.com/css?family=Quicksand:500|Roboto:300,400,500");
-$icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
-@import 'node_modules/bootstrap-sass/assets/stylesheets/_bootstrap.scss';
+
+@import "~bootstrap/dist/css/bootstrap.css";
 @import 'node_modules/compass-mixins/lib/_compass.scss';
 @import 'lib/ladda.scss';
 
